--- a/src/app/calcularcredito/calcularcredito.page.html
+++ b/src/app/calcularcredito/calcularcredito.page.html
@@ -8,24 +8,43 @@
       <!-- Page content start -->
       <main class="margin mt-0">
 
-      
+          <div style="margin:auto" align="center"> <img src="assets/img/thf.png" alt=""></div>
           <section class="container">
                
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back font-redlgc">Calcular Crédito</span></div>
-                <div class="form-divider"></div>
-                <h4 class="title-main font-redlgc text-center"> El crédito hipotecario hace tu futuro presente</h4>
+                <h4 class="title-main font-redlgc text-center">Asesores Patrimoniales Hipotecarios</h4>
                 
                 <div class="form-row-group with-icons">
-                   
-                  
+                    <div class="form-divider"></div>
+                    <div class="form-row no-padding escondido mensaje font-redlgc">
+                        <p class="font-14 font-bold font-redlgc" style="text-align: justify ;">Somos Asesores Patrimoniales Hipotecarios® que buscamos
 
+                            tu Consolidación Patrimonial a través de la recomendación
+                            
+                            del crédito hipotecario que mejor se adecua a tu perfil.</p><div class="form-divider"></div>
+                         
+                      
+                    </div>
+                    <div class="form-row no-padding escondido text-center mensaje font-redlgc" style="margin-bottom: 8px">
+                            <p class="font-14 font-bold font-redlgc text-center" style="text-align: center ;"> Visita nuestro sitio web para mas información</p>
+                         
+                      
+                    </div>
+                    <div class="list-content  text-center">
+                        <span class="font-14 font-bold font-redlgc text-center" align="center" style="text-align: center ;"> www.tuhipotecafacil.com </span>
+                      
+                    </div>
+                    <div class="list-content  text-left">
+                        <h4 class="text-left font-redlgc font-redlgc">Simulador de Crédito</h4>
+                      
+                    </div>
+                    <div style="margin-bottom: 10px" class="form-row no-padding escondido mensaje font-redlgc">
+                        <span class="font-14 font-bold font-redlgc" style="text-align: justify ;">Te dejamos un simulador aproximado que puede variar de acuerdo a tu perfil una vez analizada tu documentación.</span>
+                     
+                    </div>
                    <div class="form-row no-padding">
                       <i class="fa fa-money"></i>
                       <input type="text" name="valor_vivienda" id="valor_vivienda" class="form-element" placeholder="Valor de la Vivienda">
                     </div>
-                  
-                
                     <div class="form-row no-padding">
                       <i class="fa fa-dollar"></i>
                       <input type="text" name="credito_deseado" id="credito_deseado" class="form-element" placeholder="Crédito Deseado">
@@ -67,10 +86,10 @@
                       <label for="">MENSUALIDAD: <span class="mensualidad font-16 font-bold font-redlgc"  [innerHTML]="mensualidad" ></span></label>
                     </div>
                     <div class="form-divider escondido" style="display:none"></div>
-                    <div class="form-row no-padding escondido text-center mensaje font-redlgc">
-                        Te dejamos una  simulación aproximada
-                              que puede variar de acuerdo a tu perfil una vez analizada tu documentación y Reporte de Buró de Crédito
-
+                    <div class="list-content  text-center">
+                       
+                            <p class="font-14 font-bold font-redlgc" style="text-align: center ;"> El crédito hipotecario hace tu futuro presente.</p>
+                         
                     </div><br>
                 </div>
            
