--- a/src/app/members/incumplimientos/incumplimientos.page.html
+++ b/src/app/members/incumplimientos/incumplimientos.page.html
@@ -13,7 +13,7 @@
               <div class="dash-content relative">
                 <h3 class="w-text">Incumplimientos</h3>
                 <div class="notification">
-                    <a href="javascript:void(0)" [routerLink]="['/members/crear-incumplimiento',polId]"><i class="fa fa-plus"></i></a>
+                    <a href="javascript:void(0)" [routerLink]="['/members/crear-incumplimiento',polId,folio]"><i class="fa fa-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -43,7 +43,7 @@
             <div class="form-divider"></div>
             <section class="container">
               <div class="form-row">
-                <a [routerLink]="['/members/crear-incumplimiento',polId]" style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" class="button circle block">(+) Incumplimiento </a>
+                <a [routerLink]="['/members/crear-incumplimiento',polId,folio]" style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" class="button circle block">(+) Incumplimiento </a>
                </div>
             </section>
          
