--- a/src/app/members/poliza/poliza.page.html
+++ b/src/app/members/poliza/poliza.page.html
@@ -39,7 +39,7 @@
 								<small class="txt-muted">Protección</small>
 							</li>
 							
-							<li routerLink="/members/incumplimientos/{{id}}">
+							<li routerLink="/members/incumplimientos/{{id}}/{{folio}}">
 								
 								<h2 style="cursor:pointer" >{{incumplimientos}}</h2>
 								<small class="txt-muted">Incumplimiento (s)</small><br>
