--- a/src/app/proteccionbasica/proteccionbasica.page.html
+++ b/src/app/proteccionbasica/proteccionbasica.page.html
@@ -13,49 +13,62 @@
          
         
           <div class="form-divider"></div>
-          <div class="form-label-divider"><span class="font-redlgc">Protección Básica</span></div>
+          <div class="form-label-divider"><span class="font-redlgc">Protección Jurídica de Arrendamiento
+            Básica</span></div>
           <div class="form-divider"></div>
-
-
+          <div class="form-divider"></div>
+         
           <div class="news-list-item no-image">
-              <div class="list-content  text-center">
-                  <h4 class="text-center font-black font-redlgc">SOLUCIONES</h4>
+              <div class="form-divider"></div>
+              <div class="list-content">
+                  <p class="font-14 font-bold font-redlgc" style="text-align: justify ;"> Instrumento jurídico que le permite proteger su inmueble y patrimonio por medio de la cobranza 
+                      extrajudicial de rentas y servicios adeudados como lo son agua, luz, gas y mantenimiento y además 
+                      del apoyo para la recuperación y desocupación de su inmueble por alguna clase de incumplimiento por 
+                      parte del inquilino, de acuerdo a lo estipulado en el contrato de arrendamiento celebrado entre usted y el inquilino.</p>
+                
+              </div>
+              <div class="list-content  text-left">
+                  <h4 class="text-left font-redlgc font-redlgc">SOLUCIONES</h4>
                 
               </div>
               <div class="list-content">
-                <span class="font-14 font-bold font-black">- Entrega y desocupacion del inmueble</span><br>
-              
+                <span class="font-14 font-bold font-redlgc">- ENTREGA Y DESOCUPACIÓN DEL INMUEBLE.</span><br>
+                <span class="font-14 font-bold font-redlgc">- COBRANZA EXTRAJUDICIAL.</span><br>
+                <span class="font-14 font-bold font-redlgc">- NOTIFICACIONES AL INQUILINO.</span><br>
+                
+                
+                
               </div>
               <div class="list-content">
-                  <span class="font-14 font-bold font-black">INCLUYE:</span><br><br>
-                  <p class="font-black"> 
-                      <b>Investigación en 24 horas</b> (que nos asegura que el posible inquilino sea el idóneo para el propietario).
-                  </p><br>
-                  <p class="font-black"> 
-                     Investigación de las Partes en Tribunales, Incidencias Legales, Antecedentes No Penales y Dictaminación Jurídica de Documentos.
-                  </p><br>
-                  <p class="font-black"> 
-                     Investigación Arrendatario y Fiador en Buró de Crédito.
-                  </p><br>
-                  <p class="font-black"> 
-                     Elaboración de Contrato de Arrendamiento.
-                  </p><br>
-                  <p class="font-black"> 
-                     Asistencia de un Abogado en la Firma del Contrato de Arrendamiento.
-                  </p><br>
-                  <p class="font-black"> 
-                     Cobranza Extrajudicial.
-                  </p><br>
-                  <p class="font-black"> 
-                     Juicios Necesarios para Obtener, Entrega y Desocupación del Inmueble. Pago de Rentas. Pago de Servicios y Pago de Daños.
-                  </p><br>
-                  <p class="font-black"> 
-                    Mediación entre Partes.
-                  </p><br>
-                  <p class="font-black"> 
-                    Asesoria Legal Ilimitada Durante la Vigencia del Contrato de Arrendamiento.
-                  </p>
-                </div>
+                <span class="font-14 font-bold font-redlgc">INCLUYE:</span><br><br>
+                <p class="font-redlgc"> 
+                    <b>Investigación en 24 horas</b> (que nos asegura que el posible inquilino sea el idóneo para el propietario).
+                </p><br>
+                <p class="font-redlgc"> 
+                    Investigación de las Partes en Tribunales, Incidencias Legales, Antecedentes No Penales y Dictaminación Jurídica de Documentos.
+                </p><br>
+                <p class="font-redlgc"> 
+                    Investigación Arrendatario y Fiador en Buró de Crédito.
+                </p><br>
+                <p class="font-redlgc"> 
+                    Elaboración de Contrato de Arrendamiento.
+                </p><br>
+                <p class="font-redlgc"> 
+                    Asistencia de un Abogado en la Firma del Contrato de Arrendamiento.
+                </p><br>
+                <p class="font-redlgc"> 
+                    Cobranza Extrajudicial.
+                </p><br>
+                <p class="font-redlgc"> 
+                    Juicios Necesarios para Obtener, Entrega y Desocupación del Inmueble. Pago de Rentas. Pago de Servicios y Pago de Daños.
+                </p><br>
+                <p class="font-redlgc"> 
+                  Mediación entre Partes.
+                </p><br>
+                <p class="font-redlgc"> 
+                  Asesoria Legal Ilimitada Durante la Vigencia del Contrato de Arrendamiento.
+                </p>
+              </div>
           </div>
           <app-footer></app-footer>
       </main>
