--- a/src/app/proteccionfull/proteccionfull.page.html
+++ b/src/app/proteccionfull/proteccionfull.page.html
@@ -13,49 +13,67 @@
            
           
             <div class="form-divider"></div>
-            <div class="form-label-divider"><span class="font-redlgc">Protección Full</span></div>
+            <div class="form-label-divider"><span class="font-redlgc">Protección Jurídica de Arrendamiento
+                    FULL</span></div>
+            <div class="form-divider"></div>
             <div class="form-divider"></div>
   
-  
             <div class="news-list-item no-image">
+                <div class="form-divider"></div>
+                <div class="list-content">
+                    <p class="font-14 font-bold font-redlgc" style="text-align: justify ;"> Instrumento jurídico que le permite proteger su inmueble y 
+                        patrimonio en a través de la cobranza de rentas y servicios adeudados como lo son agua, luz, gas y mantenimiento, en caso de ser 
+                        necesario se realiza la cobranza judicial por falta de pago de rentas, servicios y finalmente la entrega y desocupación del 
+                        inmueble por cualquier incumplimiento a lo estipulado en el contrato de arrendamiento.
+
+                    </p>
+                    
+                </div>
                 <div class="list-content  text-center">
-                    <h4 class="text-center font-black font-redlgc">SOLUCIONES</h4>
+                    <h4 class="text-center font-redlgc font-redlgc">SOLUCIONES</h4>
                   
                 </div>
                 <div class="list-content">
-                  <span class="font-14 font-bold font-black">- Entrega y desocupacion del inmueble</span><br>
-                
+                  <span class="font-14 font-bold font-redlgc">- ENTREGA Y DESOCUPACIÓN DEL INMUEBLE</span><br>
+                  <span class="font-14 font-bold font-redlgc">- PÓLIZA TOTAL CONTIENE COBRO DE RENTAS Y SERVICIOS ADEUDADOS EN EL ARRENDAMIENTO. </span><br>
+                  <span class="font-14 font-bold font-redlgc">- LA LEY DE EXTINCIÓN DE DOMINIO.</span><br>
+                  <span class="font-14 font-bold font-redlgc">- DELITOS QUE PUEDAN COMETER DENTRO DEL INMUEBLE.</span><br>
+                  <span class="font-14 font-bold font-redlgc">- EL COBRO DE DEMANDAS.</span><br>
+                  <span class="font-14 font-bold font-redlgc">- ADEUDOS QUE LLEGUEN AL INQUILINO POSTERIORES DESPUÉS DE DEJAR EL INMUEBLE.</span><br><br>
+                  <span class="font-14 font-bold font-redlgc">GOZA DE TODOS ESTOS BENEFICIOS POR EL 65% DEL VALOR DE UNA RENTA MENSUAL.</span><br>
+               
                 </div>
                 <div class="list-content">
-                    <span class="font-14 font-bold font-black">INCLUYE:</span><br><br>
-                    <p class="font-black"> 
+                    <span class="font-14 font-bold font-redlgc">INCLUYE:</span><br><br>
+                    <p class="font-redlgc"> 
                         <b>Investigación en 24 horas</b> (que nos asegura que el posible inquilino sea el idóneo para el propietario).
                     </p><br>
-                    <p class="font-black"> 
-                       Investigación de las Partes en Tribunales, Incidencias Legales, Antecedentes No Penales y Dictaminación Jurídica de Documentos.
+                    <p class="font-redlgc"> 
+                    Investigación de las Partes en Tribunales, Incidencias Legales, Antecedentes No Penales y Dictaminación Jurídica de Documentos.
                     </p><br>
-                    <p class="font-black"> 
-                       Investigación Arrendatario y Fiador en Buró de Crédito.
+                    <p class="font-redlgc"> 
+                    Investigación Arrendatario y Fiador en Buró de Crédito.
                     </p><br>
-                    <p class="font-black"> 
-                       Elaboración de Contrato de Arrendamiento.
+                    <p class="font-redlgc"> 
+                    Elaboración de Contrato de Arrendamiento.
                     </p><br>
-                    <p class="font-black"> 
-                       Asistencia de un Abogado en la Firma del Contrato de Arrendamiento.
+                    <p class="font-redlgc"> 
+                    Asistencia de un Abogado en la Firma del Contrato de Arrendamiento.
                     </p><br>
-                    <p class="font-black"> 
-                       Cobranza Extrajudicial.
+                    <p class="font-redlgc"> 
+                    Cobranza Extrajudicial.
                     </p><br>
-                    <p class="font-black"> 
-                       Juicios Necesarios para Obtener, Entrega y Desocupación del Inmueble. Pago de Rentas. Pago de Servicios y Pago de Daños.
+                    <p class="font-redlgc"> 
+                    Juicios Necesarios para Obtener, Entrega y Desocupación del Inmueble. Pago de Rentas. Pago de Servicios y Pago de Daños.
                     </p><br>
-                    <p class="font-black"> 
-                      Mediación entre Partes.
+                    <p class="font-redlgc"> 
+                    Mediación entre Partes.
                     </p><br>
-                    <p class="font-black"> 
-                      Asesoria Legal Ilimitada Durante la Vigencia del Contrato de Arrendamiento.
+                    <p class="font-redlgc"> 
+                    Asesoria Legal Ilimitada Durante la Vigencia del Contrato de Arrendamiento.
                     </p>
-                  </div>
+                </div>
+                
             </div>
             <app-footer></app-footer>
         </main>
