--- a/src/app/proteccionglobal/proteccionglobal.page.html
+++ b/src/app/proteccionglobal/proteccionglobal.page.html
@@ -11,52 +11,107 @@
            
            
             <div class="form-divider"></div>
-            <div class="form-label-divider"><span class="font-redlgc">Protección Global</span></div>
+            <div class="form-label-divider"><span class="font-redlgc">Protección Jurídica de Arrendamiento
+                    Global
+            </span></div>
+            <div class="form-divider"></div>
             <div class="form-divider"></div>
 
 
             <div class="news-list-item no-image">
-                <div class="list-content  text-center">
-                    <h4 class="text-center font-black font-redlgc">SOLUCIONES</h4>
-                  
-                </div>
+                <div class="form-divider"></div>
                 <div class="list-content">
-                  <span class="font-14 font-bold font-black">- Entrega y desocupacion del inmueble</span><br>
-                  <span class="font-14 font-bold font-black">- Cobranza judicial de servicios</span><br>
-                  <span class="font-14 font-bold font-black">- Cobranza judicial de rentas adeudadas</span><br>
-                  <span class="font-14 font-bold font-black">- Cobranza judicial de Daños</span><br>
-                </div>
-                <div class="list-content">
-                    <span class="font-14 font-bold font-black">INCLUYE:</span><br><br>
-                    <p class="font-black"> 
-                        <b>Investigación en 24 horas</b> (que nos asegura que el posible inquilino sea el idóneo para el propietario).
-                    </p><br>
-                    <p class="font-black"> 
-                       Investigación de las Partes en Tribunales, Incidencias Legales, Antecedentes No Penales y Dictaminación Jurídica de Documentos.
-                    </p><br>
-                    <p class="font-black"> 
-                       Investigación Arrendatario y Fiador en Buró de Crédito.
-                    </p><br>
-                    <p class="font-black"> 
-                       Elaboración de Contrato de Arrendamiento.
-                    </p><br>
-                    <p class="font-black"> 
-                       Asistencia de un Abogado en la Firma del Contrato de Arrendamiento.
-                    </p><br>
-                    <p class="font-black"> 
-                       Cobranza Extrajudicial.
-                    </p><br>
-                    <p class="font-black"> 
-                       Juicios Necesarios para Obtener, Entrega y Desocupación del Inmueble. Pago de Rentas. Pago de Servicios y Pago de Daños.
-                    </p><br>
-                    <p class="font-black"> 
-                      Mediación entre Partes.
-                    </p><br>
-                    <p class="font-black"> 
-                      Asesoria Legal Ilimitada Durante la Vigencia del Contrato de Arrendamiento.
+                    <p class="font-14 font-bold font-redlgc" style="text-align: justify ;"> Instrumento jurídico que le permite proteger su inmueble y 
+                        patrimonio en a través de la cobranza de rentas y servicios adeudados como lo son agua, luz, gas y mantenimiento, en caso de ser 
+                        necesario se realiza la cobranza judicial por falta de pago de rentas, servicios y finalmente la entrega y desocupación del inmueble 
+                        por cualquier incumplimiento a lo estipulado en el contrato de arrendamiento.
                     </p>
-                  </div>
-            </div>
+                    
+                </div>
+                <div class="list-content  text-left">
+                    <h4 class="text-left font-redlgc font-redlgc">SOLUCIONES</h4>
+                    
+                </div>
+                <div class="list-content">
+                   
+                    <span class="font-14 font-bold font-redlgc">- ENTREGA Y DESOCUPACIÓN DEL INMUEBLE.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- RECUPERACION DE PAGO DE SERVICIOS VENCIDOS.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- RECUPERACION DE PAGO DE RENTAS NO PAGADAS.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- RECUPERACION DE PAGO POR DAÑOS.</span><br>
+                    <span class="font-14 font-bold font-redlgc"  style="text-align: justify ;">- INTERVENCIÓN DE ABOGADOS PARA PROMOVER LA RECUPERACIÓN DEL INMUEBLE.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- 30 DIAS MAS DE PROTECCION JURIDICA.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- RECABACIÓN DE FIRMA EXTRA SIN COSTO ADICIONAL. (AREA METROPOLITANA).</span><br>
+                    
+                    <span class="font-14 font-bold font-redlgc">- COBRANZA EXTRAJUDICIAL.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- NOTIFICACIONES AL INQUILINO.</span><br>
+                
+                </div>
+                <div class="list-content  text-left">
+                    <h4 class="text-left font-redlgc font-redlgc">SERVICIOS ADICIONALES</h4>
+                    
+                </div>
+              
+                <div style="margin:auto" align="center"> <img src="assets/img/segurohogar.jpg" alt=""></div>
+                <div class="list-content  text-left">
+                    <h4 class="text-left font-redlgc font-redlgc">SEGURO DE DAÑOS PARA TU HOGAR AMPARA</h4>
+                    
+                </div>
+                <div class="list-content">
+                   
+                    <span class="font-14 font-bold font-redlgc">- CONJUNTO DE CONSTRUCCIONES MATERIALES PRINCIPALES Y ACCESORIAS.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- BIENES MUEBLES, ENSERES, ROPA Y OTROS OBJETOS O BIENES DE USO DOMÉSTICO O FAMILIAR.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- REMOCION DE ESCOMBROS.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- RESPONSABILIDAD FAMILIAR.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- RESPONSABILIDAD CIVIL TRABAJADORES DOMESTICOS.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- ASISTENCIA EN EL HOGAR Y VIAJES.</span><br>
+                </div>
+
+                <div style="margin:auto" align="center"> <img src="assets/img/seguropymes.jpg" alt=""></div>
+                <div class="list-content  text-left">
+                    <h4 class="text-left font-redlgc font-redlgc">SEGURO DE DAÑOS PARA TU PYME AMPARA</h4>
+                    
+                </div>
+                <div class="list-content">
+                   
+                   
+                    <span class="font-14 font-bold font-redlgc">- BIENES MUEBLES, ENSERES, ROPA Y OTROS OBJETOS O BIENES DE USO DOMÉSTICO O FAMILIAR.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- INCENDIOS.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- RESPONZABILIDAD CIVIL.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- RESPONZABILIDAD CIVIL ACTIVIDADES E INMUEBLES.</span><br>
+                    <span class="font-14 font-bold font-redlgc">- CUBRE LA RESPONSABILIDAD CIVIL LEGAL POR DAÑOS QUE POR INCENDIO O EXPLOSIO QUE SE CAUSEN A EL INMUEBLE ARRENDADO.
+                             ROBO DE MERCANCÍA.</span><br>
+                </div>
+                <div class="list-content">
+                        <span class="font-14 font-bold font-redlgc">INCLUYE:</span><br><br>
+                        <p class="font-redlgc"> 
+                            <b>Investigación en 24 horas</b> (que nos asegura que el posible inquilino sea el idóneo para el propietario).
+                        </p><br>
+                        <p class="font-redlgc"> 
+                        Investigación de las Partes en Tribunales, Incidencias Legales, Antecedentes No Penales y Dictaminación Jurídica de Documentos.
+                        </p><br>
+                        <p class="font-redlgc"> 
+                        Investigación Arrendatario y Fiador en Buró de Crédito.
+                        </p><br>
+                        <p class="font-redlgc"> 
+                        Elaboración de Contrato de Arrendamiento.
+                        </p><br>
+                        <p class="font-redlgc"> 
+                        Asistencia de un Abogado en la Firma del Contrato de Arrendamiento.
+                        </p><br>
+                        <p class="font-redlgc"> 
+                        Cobranza Extrajudicial.
+                        </p><br>
+                        <p class="font-redlgc"> 
+                        Juicios Necesarios para Obtener, Entrega y Desocupación del Inmueble. Pago de Rentas. Pago de Servicios y Pago de Daños.
+                        </p><br>
+                        <p class="font-redlgc"> 
+                        Mediación entre Partes.
+                        </p><br>
+                        <p class="font-redlgc"> 
+                        Asesoria Legal Ilimitada Durante la Vigencia del Contrato de Arrendamiento.
+                        </p>
+                    </div>
+                </div>
 
     
          
