--- a/src/app/protecciontotal/protecciontotal.page.html
+++ b/src/app/protecciontotal/protecciontotal.page.html
@@ -11,20 +11,34 @@
            
            
             <div class="form-divider"></div>
-            <div class="form-label-divider"><span class="font-redlgc">Protección Total</span></div>
+            <div class="form-label-divider"><span class="font-redlgc">Protección Jurídica de Arrendamiento
+                    Total</span></div>
             <div class="form-divider"></div>
 
 
             <div class="news-list-item no-image">
-                <div class="list-content  text-center">
-                    <h4 class="text-center font-black font-redlgc">SOLUCIONES</h4>
-                  
+                <div class="form-divider"></div>
+                <div class="list-content">
+                    <p class="font-14 font-bold font-redlgc" style="text-align: justify ;"> Instrumento jurídico que le permite proteger su inmueble y 
+                        patrimonio en a través de la cobranza de rentas y servicios adeudados como lo son agua, luz, gas y mantenimiento, en caso de ser 
+                        necesario se realiza la cobranza judicial por falta de pago de rentas, servicios y finalmente la entrega y desocupación del inmueble 
+                        por cualquier incumplimiento a lo estipulado en el contrato de arrendamiento.
+
+                    </p>
+                    
+                </div>
+                <div class="list-content  text-left">
+                    <h4 class="text-left font-redlgc font-redlgc">SOLUCIONES</h4>
+                    
                 </div>
                 <div class="list-content">
-                  <span class="font-14 font-bold font-black">- Entrega y desocupacion del inmueble</span><br>
-                  <span class="font-14 font-bold font-black">- Cobranza judicial de servicios</span><br>
-                  <span class="font-14 font-bold font-black">- Cobranza judicial de rentas adeudadas</span><br>
-                  <span class="font-14 font-bold font-black">- Cobranza judicial de Daños</span><br>
+                    <span class="font-14 font-bold font-black">- ENTREGA Y DESOCUPACIÓN DEL INMUEBLE.</span><br>
+                    <span class="font-14 font-bold font-black">- RECUPERACION DE PAGO DE SERVICIOS VENCIDOS.</span><br>
+                    <span class="font-14 font-bold font-black">- RECUPERACION DE PAGO DE RENTAS NO PAGADAS.</span><br>
+                    <span class="font-14 font-bold font-black">- COBRANZA EXTRAJUDICIAL.</span><br>
+                    <span class="font-14 font-bold font-black">- NOTIFICACIONES AL INQUILINO.</span><br>
+                        
+                
                 </div>
                 <div class="list-content">
                     <span class="font-14 font-bold font-black">INCLUYE:</span><br><br>
